--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mirador-download-plugin",
+  "name": "mirador-share-plugin",
   "version": "1.0.0",
-  "description": "mirador-download-plugin React component",
+  "description": "mirador-share-plugin React component",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
