--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "mirador": "^3.0.0-alpha.7",
+    "prop-types": "^15.7.2",
     "react": "16.x",
     "react-dom": "16.x"
   },
@@ -47,6 +48,7 @@
     "jest": "^24.8.0",
     "mirador": "^3.0.0-alpha.7",
     "nwb": "0.23.x",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
