--- a/package.json
+++ b/package.json
@@ -36,18 +36,19 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2",
-    "eslint": "^5.3.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "jest": "^24.8.0",
-    "mirador": "^3.0.0-alpha.10",
+    "mirador": "^3.0.0-alpha.11",
+    "node-sass": "^4.12.0",
     "nwb": "0.23.x",
     "nwb-sass": "^0.9.0",
     "prop-types": "^15.7.2",
