--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@material-ui/core": "^4.1.1",
-    "@material-ui/icons": "^4.2.0",
-    "mirador": "^3.0.0-alpha.14",
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
+    "mirador": "^3.0.0-beta.0",
     "prop-types": "^15.7.2",
     "react": "16.x",
     "react-copy-to-clipboard": "^5.0.1",
@@ -34,8 +34,8 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.1.1",
-    "@material-ui/icons": "^4.2.0",
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "enzyme": "^3.9.0",
@@ -49,7 +49,6 @@
     "jest": "^24.8.0",
     "mirador": "^3.0.0-alpha.14",
     "nwb": "0.23.x",
-    "nwb-sass": "^0.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
