Update to use MUI toggle buttons instead of radios

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/icons": "^4.5.1",
-    "mirador": "^3.0.0-beta.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "mirador": "^3.0.0-rc.4",
     "prop-types": "^15.7.2",
     "react": "16.x",
     "react-copy-to-clipboard": "^5.0.1",
@@ -34,8 +35,9 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "enzyme": "^3.9.0",
@@ -47,7 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "jest": "^24.8.0",
-    "mirador": "^3.0.0-alpha.14",
+    "mirador": "^3.0.0-rc.4",
     "nwb": "0.23.x",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
