--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirador-share-plugin",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "mirador-share-plugin React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -10,6 +10,10 @@
     "lib",
     "umd"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ProjectMirador/mirador-share-plugin.git"
+  },
   "scripts": {
     "build": "nwb build-react-component",
     "clean": "nwb clean-module && nwb clean-demo",
