chore: update dependencies, and config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirador-share-plugin",
-  "version": "0.16.0",
+  "version": "1.0.0-alpha.5",
   "description": "mirador-share-plugin React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -15,56 +15,79 @@
     "url": "git@github.com:ProjectMirador/mirador-share-plugin.git"
   },
   "scripts": {
-    "build": "nwb build-react-component",
+    "build": "npm run build:umd",
+    "build:demo": "NODE_ENV=development webpack --mode=development",
+    "build:umd": "NODE_ENV=production webpack --mode=production",
+    "build:es": "mkdir -p es && cp -r src/* es && NODE_ENV=production MODULE_FORMAT=es npx babel es -d es",
+    "build:cjs": "mkdir -p lib && cp -r src/* lib && NODE_ENV=production MODULE_FORMAT=cjs npx babel lib -d lib",
     "clean": "nwb clean-module && nwb clean-demo",
     "lint": "npx eslint ./",
     "prepublishOnly": "npm run build",
-    "start": "nwb serve-react-demo",
+    "start": "NODE_ENV=development webpack serve --open",
     "test": "npm run lint && jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "notistack": "^3.0.1"
+    "notistack": "^3.0.1",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/icons": "^4.5.1",
-    "mirador": "^3.0.0-beta.0",
+    "@mui/icons-material": "^5.x",
+    "@mui/material": "^5.x",
+    "mirador": "^4.0.0-alpha.5",
     "prop-types": "^15.7.2",
-    "react": "16.x",
+    "react": "18.x",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "16.x"
+    "react-dom": "18.x"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/icons": "^4.5.1",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.3",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-regenerator": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^9.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
     "jest": "^24.8.0",
-    "mirador": "^3.0.0-alpha.14",
-    "nwb": "0.23.x",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mirador": "^4.0.0-alpha.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.6"
+    "react-dom": "^18.0.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.7.4"
   },
   "author": "",
   "homepage": "",
   "license": "Apache-2.0",
-  "repository": "",
   "keywords": [
+    "iiif",
+    "mirador",
+    "mirador3",
+    "mirador4",
+    "mirador-plugin",
     "react-component"
   ]
 }
