--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,35 @@
 {
   "env": {
-    "jest/globals": true
+    "browser": true
   },
-  "extends": ["airbnb"],
+  "extends": ["airbnb", "prettier"],
   "globals": {
     "page": true,
     "document": true
   },
-  "parser": "babel-eslint",
-  "plugins": ["jest"],
+  "parser": "@babel/eslint-parser",
+  "plugins": ["babel", "react", "react-hooks", "prettier"],
   "rules": {
+    "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": "off",
+    "no-console": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "require-jsdoc": ["error", {
+       "require": {
+         "FunctionDeclaration": true,
+         "MethodDefinition": true,
+         "ClassDeclaration": true,
+        "ArrowFunctionExpression": true,
+        "FunctionExpression": true
+      }
+    }],
+    "no-restricted-syntax": ["off", "ForOfStatement"],
+    "react/no-unstable-nested-components": 1,
+    "react/no-unused-class-component-methods": 1,
+    "react/jsx-fragments": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/prefer-stateless-function": "off",
+    "react/function-component-definition": "off",
+    "no-continue": "off"
   }
 }
