style: add prettier

--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "notistack": "^3.0.1",
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6"
+    "@emotion/styled": "^11.10.6",
+    "notistack": "^3.0.1"
   },
   "peerDependencies": {
     "@mui/icons-material": "^5.x",
     "@mui/material": "^5.x",
-    "mirador": "4.0.0-alpha.1",
+    "mirador": "4.0.0-alpha.5",
     "prop-types": "^15.7.2",
     "react": "18.x",
     "react-copy-to-clipboard": "^5.0.1",
@@ -61,15 +61,18 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.35.0",
-    "jest": "^24.8.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
-    "mirador": "4.0.0-alpha.1",
+    "jest": "^24.8.0",
+    "mirador": "4.0.0-alpha.5",
+    "prettier": "^3.3.3",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
