--- a/package.json
+++ b/package.json
@@ -2,33 +2,28 @@
   "name": "mirador-share-plugin",
   "version": "1.0.0-alpha.1",
   "description": "mirador-share-plugin React component",
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main": "./dist/mirador-share-plugin.js",
+  "module": "./dist/mirador-share.plugin.es.js",
   "files": [
-    "css",
-    "es",
-    "lib",
-    "umd"
+   "dist"
   ],
+  "exports": {
+    "./src": "./src/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:ProjectMirador/mirador-share-plugin.git"
   },
   "scripts": {
-    "build": "npm run build:umd",
-    "build:demo": "NODE_ENV=development webpack --mode=development",
-    "build:umd": "NODE_ENV=production webpack --mode=production",
-    "build:es": "mkdir -p es && cp -r src/* es && NODE_ENV=production MODULE_FORMAT=es npx babel es -d es",
-    "build:cjs": "mkdir -p lib && cp -r src/* lib && NODE_ENV=production MODULE_FORMAT=cjs npx babel lib -d lib",
+    "build": "vite build --config vite.config.js",
+    "clean": "rm -rf ./dist",
     "lint": "npx eslint ./",
     "prepublishOnly": "npm run build",
-    "start": "NODE_ENV=development webpack serve --open",
-    "test": "npm run lint && jest",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch"
+    "start": "vite",
+    "test": "npm run lint && npx vitest run",
+    "test:coverage": "npm run lint && npx vitest run --coverage"
   },
   "dependencies": {
-    "@emotion/babel-plugin": "^11.11.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -37,49 +32,37 @@
   "peerDependencies": {
     "@mui/icons-material": "^5.x",
     "@mui/material": "^5.x",
-    "mirador": "4.0.0-alpha.5",
+    "mirador": "4.0.0-alpha.6",
     "prop-types": "^15.7.2",
     "react": "18.x",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "18.x"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.25.2",
-    "@babel/eslint-parser": "^7.25.1",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-regenerator": "^7.16.7",
-    "@babel/plugin-transform-runtime": "^7.24.7",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/preset-react": "^7.24.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^9.1.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "@mui/material": "^5.x",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.4",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.35.0",
-    "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.0",
-    "jest": "^24.8.0",
-    "mirador": "4.0.0-alpha.5",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "glob": "^10.3.0",
+    "happy-dom": "^15.11.7",
+    "mirador": "4.0.0-alpha.6",
     "prettier": "^3.3.3",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^18.0.0",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.7.4"
+    "vite": "^6.0.0",
+    "vitest": "^2.1.4",
+    "vitest-fetch-mock": "^0.4.2"
   },
   "author": "",
   "homepage": "",
