--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirador-share-plugin",
-  "version": "0.16.0",
+  "version": "1.0.0-alpha.1",
   "description": "mirador-share-plugin React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -15,55 +15,83 @@
     "url": "git@github.com:ProjectMirador/mirador-share-plugin.git"
   },
   "scripts": {
-    "build": "nwb build-react-component",
-    "clean": "nwb clean-module && nwb clean-demo",
-    "lint": "npx eslint ./",
-    "prepublishOnly": "npm run build",
-    "start": "nwb serve-react-demo",
+    "build": "npm run build:umd && npm run build:demo",
+    "build:demo": "NODE_ENV=development webpack --mode=development",
+    "build:umd": "NODE_ENV=production webpack --mode=production",
+    "build:es": "mkdir -p es && cp -r src/* es && NODE_ENV=production MODULE_FORMAT=es npx babel es -d es",
+    "build:cjs": "mkdir -p lib && cp -r src/* lib && NODE_ENV=production MODULE_FORMAT=cjs npx babel lib -d lib",
+    "clean": "rm -rf ./umd && rm -rf ./es && rm -rf ./lib && rm -rf ./demo/dist",
+    "lint": "eslint ./src ./__tests__",
+    "prepublishOnly": "npm run clean && npm run build:es && npm run build:cjs && npm run build",
+    "start": "NODE_ENV=development webpack serve --open",
     "test": "npm run lint && jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "notistack": "^3.0.1"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/icons": "^4.5.1",
-    "mirador": "^3.0.0-beta.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "mirador": "^4.0.0-alpha.5",
     "prop-types": "^15.7.2",
-    "react": "16.x",
+    "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "16.x"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/icons": "^4.5.1",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.7",
+    "@babel/eslint-parser": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-regenerator": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "jest": "^24.8.0",
-    "mirador": "^3.0.0-alpha.14",
-    "nwb": "0.23.x",
+    "babel-loader": "^9.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^27.1.5",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.4.3",
+    "jest-puppeteer": "^9.0.2",
+    "mirador": "^4.0.0-alpha.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.6"
+    "react-dom": "^18.0.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.7.4"
   },
   "author": "",
   "homepage": "",
   "license": "Apache-2.0",
-  "repository": "",
   "keywords": [
     "react-component"
   ]
