--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mirador-share-plugin",
   "version": "1.0.0-alpha.3",
   "description": "mirador-share-plugin React component",
+  "type": "module",
   "main": "./dist/mirador-share-plugin.js",
   "module": "./dist/mirador-share-pugin.es.js",
   "files": [
@@ -35,7 +36,7 @@
   "peerDependencies": {
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "mirador": "^4.0.0-alpha.5",
+    "mirador": "^4.0.0-alpha.10",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
