--- a/package.json
+++ b/package.json
@@ -28,23 +28,28 @@
     "test": "npm run lint && npx vitest run"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "notistack": "^3.0.1"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "mirador": "^4.0.0-alpha.10",
+    "@mui/system": "^5.x",
+    "mirador": "^4.0.0-alpha.14",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+
+    "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@mui/system": "^5.x",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.0.1",
@@ -62,11 +67,12 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "glob": "^10.3.0",
     "happy-dom": "^15.11.7",
-    "mirador": "^4.0.0-alpha.5",
+    "mirador": "^4.0.0-alpha.14",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^18.0.0",
+    "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0",
     "vite": "^6.0.0",
     "vitest": "^2.1.4",
     "vitest-fetch-mock": "^0.4.2"
