--- a/package.json
+++ b/package.json
@@ -33,23 +33,22 @@
   "peerDependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
-    "@mui/system": "^5.x",
-    "mirador": "^4.0.0-alpha.14",
+    "@mui/icons-material": "^6.0.0",
+    "@mui/material": "^6.x",
+    "@mui/system": "^6.x",
+    "mirador": "^4.0.0-alpha.15",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^18.0.0",
-
     "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
-    "@mui/system": "^5.x",
+    "@mui/icons-material": "^6.0.0",
+    "@mui/material": "^6.x",
+    "@mui/system": "^6.x",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.0.1",
@@ -67,7 +66,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "glob": "^10.3.0",
     "happy-dom": "^15.11.7",
-    "mirador": "^4.0.0-alpha.14",
+    "mirador": "^4.0.0-alpha.15",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-copy-to-clipboard": "^5.0.1",
