--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@mui/system": "^6.x",
     "mirador": "^4.0.0-alpha.15",
     "prop-types": "^15.7.2",
-    "react": "^18.0.0",
+    "react": "^18.0.0 || ^19.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
@@ -54,8 +54,8 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@vitejs/plugin-react": "^4.3.3",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@vitest/ui": "^2.1.4",
+    "@vitest/coverage-v8": "^3.0.0",
+    "@vitest/ui": "^3.0.0",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
@@ -65,15 +65,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^6.2.0",
     "glob": "^10.3.0",
-    "happy-dom": "^15.11.7",
+    "happy-dom": "^17.0.0",
     "mirador": "^4.0.0-alpha.15",
     "prop-types": "^15.7.2",
-    "react": "^18.0.0",
+    "react": "^19.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^19.0.0",
     "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0",
     "vite": "^6.0.0",
-    "vitest": "^2.1.4",
+    "vitest": "^3.0.0",
     "vitest-fetch-mock": "^0.4.2"
   },
   "author": "",
