--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "npm run lint && npx vitest run"
   },
   "dependencies": {
+    "copy-to-clipboard": "^3.3.0",
     "notistack": "^3.0.1"
   },
   "peerDependencies": {
@@ -36,10 +37,9 @@
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.x",
     "@mui/system": "^6.x",
-    "mirador": "^4.0.0-alpha.15",
+    "mirador": "^4.0.0-alpha.16",
     "prop-types": "^15.7.2",
     "react": "^18.0.0 || ^19.0.0",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^18.0.0 || ^19.0.0",
     "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0"
   },
@@ -69,7 +69,6 @@
     "mirador": "^4.0.0-alpha.15",
     "prop-types": "^15.7.2",
     "react": "^19.0.0",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^19.0.0",
     "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0",
     "vite": "^6.0.0",
