--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^7.0.0",
-    "@mui/material": "^7.x",
-    "@mui/system": "^7.x",
+    "@mui/material": "7.x",
+    "@mui/system": "7.x",
     "mirador": "^4.0.0-alpha.17",
     "prop-types": "^15.7.2",
     "react": "^18.0.0 || ^19.0.0",
@@ -45,8 +45,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^7.0.0",
-    "@mui/material": "^7.x",
-    "@mui/system": "^7.x",
+    "@mui/material": "7.x",
+    "@mui/system": "7.x",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.0.1",
